# libsync

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.example.yml  mockup.html  pyproject.toml
.ai-project/decisions/: refactoring-opportunities.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pytest.yml
backend/: main.py
backend/api/: auth.py  config.py  downloads.py  library.py  sync.py  websocket.py
backend/models/: database.py  schemas.py
backend/services/: config_bridge.py  download.py  event_bus.py  library.py  scan.py  sync.py
docker/: Dockerfile  docker-compose.yml
docs/: WEB_UI.md
frontend/: README.md  package-lock.json  svelte.config.js
frontend/src/: app.html
frontend/tests/: api-error-message.test.js  auth-ui-logic.test.js
qobuz-api/: .gitignore
streamrip/: config.py  config.toml  db.py
streamrip/client/: qobuz.py  (+2 more)
tests/: test_api_library_scan.py  test_api_routes.py  test_app_database.py  test_app_startup.py  test_auto_sync.py  test_auto_sync_hotreload.py  test_client_init.py  test_config.py  test_config.toml  test_database_migration.py  test_download_config_bools.py  test_download_failure_threshold.py  test_download_integration.py  test_download_service.py  test_e2e_download.py  test_error_handling.py  test_event_bus.py  test_force_redownload.py  test_library_sdk.py  test_library_service.py  test_scan_job.py  test_scan_mark.py  test_scan_matcher.py  test_scan_normalize.py  test_scan_tag_reader.py  test_soundcloud_fixes.py  test_static_serving.py  test_sync_service.py  test_tagger.py  test_tidal_fixes.py  test_tui.py
(+45 files in other folders)
