[tool.poetry]
name = "streamrip"
version = "3.0.0"
description = "Web UI for managing Qobuz and Tidal libraries — a FastAPI + SvelteKit frontend on top of the standalone Qobuz and Tidal SDKs"
authors = ["Arthur Soares"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/arthursoares/streamrip"
classifiers = [
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: OS Independent",
]
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = ">=3.10 <4.0"
# Web stack
fastapi = ">=0.110"
uvicorn = ">=0.29"
httpx = ">=0.27"
websockets = "*"
# Shared HTTP / async runtime (also pulled in transitively by the SDKs)
aiohttp = "^3.9"
# The qobuz and tidal SDKs are installed from the sdks/qobuz_api_client
# submodule — see `make deps`. They carry their own dependencies (mutagen,
# aiolimiter, pycryptodomex, aiofiles).

[tool.poetry.dev-dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
ruff = "^0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
log_level = "DEBUG"
asyncio_mode = "auto"
log_cli = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ASYNC", "N", "RUF", "ERA001"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
